[package]
name = "zjhttpc"
version = "0.1.3"
edition = "2024"
description = "HTTP client made by Jinhui ZHANG. Aims at easy to use, with special features I want"
license = "GPL-3.0-only"

[dependencies]
anyhow_ext = "0.2.1"
async-std = "1.13.0"
async-tls = "0.13.0"
base64-simd = "0.8.0"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
derive_builder = "0.20.2"
futures = "0.3.31"
hashbrown = "0.15.2"
nom = "8.0.0"
rustls = { version = "0.21" }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "0.15.0"
snafu = { version = "0.8.6", features = ["futures"] }
thiserror = "2.0.12"
thiserror-context = "0.1.2"
tracing = "0.1.41"
url = "2.5.4"
