[package]
name = "zjhttpc"
version = "0.10.0"
edition = "2024"
description = "HTTP client made by Jinhui ZHANG. Aims at easy to use, with special features I want"
license = "GPL-3.0-only"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
async-tls = "0.13.0"
base64-simd = "0.8.0"
dashmap = { version = "6.1.0", features = ["rayon", "serde"] }
derive_builder = "0.20.2"
encoding_rs = "0.8.35"
futures = "0.3.31"
hashbrown = "0.15.2"
indexmap = "2.11.0"
nom = "8.0.0"
rand = "0.9.2"
rustls = { version = "0.21" }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_qs = "0.15.0"
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
tracing-test = "0.2.5"
